k8s/overlays/hardened/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ecommerce-network-policy
  namespace: ecommerce
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ecommerce
  egress:
    - ports:
        - {protocol: UDP, port: 53}
        - {protocol: TCP, port: 53}
        - {protocol: TCP, port: 80}
        - {protocol: TCP, port: 443}
        - {protocol: TCP, port: 5432}
        - {protocol: TCP, port: 6379}
        - {protocol: TCP, port: 9092}
        - {protocol: TCP, port: 50051}
